@@ -2,6 +2,8 @@ Sanitize History
 ================================================================================
 
 Version 1.2.1 (git)
+  * The environment hash passed into transformers now includes a :node_name item
+    containing the lowercase name of the current HTML node (e.g. "div").
   * Returning anything other than a Hash or nil from a transformer will now
     raise a meaningful Sanitize::Error exception rather than an unintended
     NameError.
